--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
     prettier:
+        name: Prettier
         runs-on: windows-latest
         steps:
             - uses: actions/checkout@v3
@@ -15,11 +16,11 @@ jobs:
                   ref: ${{ github.head_ref }}
             - uses: actions/setup-node@v2
               with:
-                node-version: "14.x"
+                  node-version: "16.x"
             - run: npm ci
             - run: npm run format
             - name: Commit changes
               uses: stefanzweifel/git-auto-commit-action@v4
               with:
-                commit_message: Apply formatting changes
-                branch: ${{ github.head_ref }}
+                  commit_message: Apply formatting changes
+                  branch: ${{ github.head_ref }}
